deployment/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app.kubernetes.io/app: muenster-jetzt
    app.kubernetes.io/component: frontend
